samples/_failures_safe/1761001863_4906ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1e939f2.c: In function ‘main’:
./samples/SAFE/__tmp_e1e939f2.c:155: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e1e939f2.c:154:5: error: expected declaration or statement at end of input
  154 |     } else if
      |     ^
